--- a/web/index.css
+++ b/web/index.css
@@ -7,6 +7,22 @@
   text-decoration: none;
   display: inline-block;
   font-size: 100px;
+  margin-bottom: 35px;
+}
+
+input[type=text] {
+  padding:10px;
+  margin:10px 0; // add top and bottom margin
+}
+
+.date {
+  width: 20%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 .button:hover {
@@ -14,6 +30,6 @@
 }
 
 .center {
-  margin-top: 400px;
+  margin-top: 250px;
   text-align: center;
 }
