--- a/web/index.css
+++ b/web/index.css
@@ -1,8 +1,30 @@
+body {
+  margin: 0;
+}
+
 h1 {
     color: white;
     padding: 15px 32px;
     font-size: 100px;
     font-family: Arial, sans-serif;
+}
+
+.header {
+  width: 100%;
+  height: 50px;
+  background-color: #4CAF50;
+  text-align: right;
+}
+
+.header-button {
+  color: white;
+  height: 50px;
+  width: 60px;
+  padding:0;
+  margin: 0;
+  background-color: #4CAF30;
+  border: none;
+  font-family: Arial, sans-serif;
 }
 
 .button {
@@ -112,6 +134,25 @@ h1 {
 @keyframes fadeIn {
   from {opacity: 0}
   to {opacity: 1}
+}
+
+.login {
+  padding-top: 200px;
+  text-align: center;
+  margin: 0;
+  width: 400px;
+  color: white;
+  font-family: Arial, sans-serif;
+}
+
+input[type=text], input[type=password] {
+  width: 90%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 #myProgress {
